0.2.8 (?/??/2012):
------------------

- Added new refind.conf option: scan_all_linux_kernels, which causes Linux
  kernels that lack ".efi" extensions to be included in scans for EFI boot
  loaders. This may help integration with Linux distributions that don't
  give their kernels such names by default. Beware, though: It can detect
  unwanted files, such as older non-stub-loader kernels or .icns files used
  to give kernels with .efi extensions custom icons.

- Improved EFI boot loader detection on boards with Gigabyte's Hybrid EFI,
  and perhaps other EFIs with a buggy StriCmp() function. Files with both
  ".efi" and ".EFI" extensions should now be detected as boot loaders.

- Fixed a bug that caused rEFInd to fail to scan for drivers if the
  filesystem driver didn't set a volume name (that is, if the relevant
  field was set to NULL rather than even an empty string). In such
  situations, rEFInd now reports the volume name as "Unknown".

0.2.7 (4/19/2012):
------------------

- After much trial and tribulation, I've overcome a GNU-EFI limitation and
  enabled rEFInd to load EFI drivers. This feature was present in the
  original build of rEFIt but was removed in the versions that could
  compile under Linux, but now it's back -- and still being compiled under
  Linux! To use it, you should place your drivers in a convenient directory
  on the ESP (or whatever partition you use to launch rEFInd) and add a
  "scan_driver_dirs" entry to refind.conf to tell rEFInd where to look. (As
  always, you should specify the driver directory relative to the root of
  the filesystem.) Note that you can't launch drivers from another
  filesystem; they must be on the same volume that holds rEFInd. Those who
  compile from source code should note that implementing this feature
  necessitated using a more recent version of the GNU-EFI library. I'm
  currently using version 3.0p, and version 3.0i does NOT work. I don't